<resources>
    <string name="app_name">RetoAlojamiento</string>
    <string name="contrasena_login">Contraseña</string>
    <string name="correo_login">Correo Electrónico</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellidos_registro">Apellidos</string>
    <string name="dni_registro">Dni</string>
    <string name="telefono_registro">Telefono</string>
    <string name="btn_IniciarSesion">Iniciar Sesion</string>
    <string name="btn_AunNoTienesCuenta">¿Aún no tienes cuenta?</string>
    <string name="btn_CrearCuenta">Crear Cuenta</string>
    <string name="btn_Registrar">Registrar</string>
    <string name="btn_ConfirmarContraseña">Confirmar Contraseña</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZW5la29iczk4IiwiYSI6ImNrNWNjbmZ2YjFwbnczbXBhcTFjOGZqMnUifQ.3HfgbQf6iq4t7JrdYR8FqA</string>
    <string name="bienvenida">Bienvenido, </string>
    <string name="reservas">Mis Reservas</string>
    <string name="busqueda">Busqueda</string>
    <string name="mapa">Mapa</string>
    <string name="salir">Salir</string>
    <string name="dni_incorrecto">DNI INCORRECTO</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_CerrarSesion">Cerrar Sesion</string>
    <string name="nombre_incorrecto">NOMBRE INCORRECTO</string>
    <string name="apellidos_incorrecto">APELLIDOS INCORRECTOS</string>
    <string name="telefono_incorrecto">TELEFONO INCORRECTO</string>
    <string name="correo_incorrecto">CORREO INCORRECTO</string>
    <string name="contraseña_no_coincide">CONTRASEÑA NO COINCIDE</string>
    <string name="registro_realizado">Registro realizado correctamente.</string>
    <string name="busquedalabel">Seleccione las condiciones de la busqueda</string>
    <string name="nombre">Nombre</string>
    <string name="tipoalojamiento_label">Tipo de Alojamiento</string>
    <string name="provincia_label">Provincia</string>
    <string name="Municipio">Municipio</string>
    <string-array name="tipo_alojamiento">
        <item></item>
        <item>Camping</item>
        <item>Albergue</item>
        <item>Alojamiento Rural</item>
    </string-array>
    <string name="usuario_o_contraseña_incorrecta">GMAIL O CONTRASEÑA INCORRECTA</string>
    <string name="Registro_realizado_correctamente">Registro realizado correctamente.</string>
    <string name="btn_reservar">Reservar</string>
    <string name="detalles_tipo">Tipo:</string>
    <string name="detalles_nombre">Nombre:</string>
    <string name="detalles_descripcion">Descripcion:</string>
    <string name="detalles_telefono">Telefono:</string>
    <string name="detalles_direccion">Direccion:</string>
    <string name="detalles_municipio">Municipio:</string>
    <string name="detalles_territorio">Territorio:</string>
    <string name="detalles_email">Email:</string>
    <string name="detalles_pagina">Web:</string>
    <string name="detalles_codigopostal">Codigo Postal</string>
    <string name="detalles_capacidad">Capacidad:</string>
    <string name="Fecha_Inicio">Fecha Inicio</string>
    <string name="Fecha_Fin">Fecha Fin</string>
    <string name="Indicar_las_fechas_de_la_reserva">Indicar las fechas de la reserva</string>
    <string name="cargando">Cargando...</string>
    <string name="Reservar">Reservar</string>
    <string name="Reserva_realizada">Reserva realizada con exito.</string>
    <string name="error_fechas">ERROR: fecha de inicio es mayor que la fecha fin</string>
    <string name="fechas_vacias">Seleccione las fechas</string>
    <string name="Ver_mapa">Ver mapa</string>
    <string name="Dni_o_gmail_existen">DNI O GMAIL YA EXISTEN.</string>
</resources>
