<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiltroBusqueda"
    android:background="#d8000000">

    <EditText
        android:id="@+id/municipio_aloj"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Municipio"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF "
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProvincias" />

    <TextView
        android:id="@+id/tipoalojamiento_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/tipoalojamiento_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_aloj" />

    <TextView
        android:id="@+id/busqueda_label"
        android:layout_width="353dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="36dp"
        android:text="@string/busquedalabel"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nombre_aloj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/provincia_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/provincia_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAlojamientos" />

    <Spinner
        android:id="@+id/spinnerAlojamientos"
        android:layout_width="248dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoalojamiento_label" />

    <Spinner
        android:id="@+id/spinnerProvincias"
        android:layout_width="245dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provincia_label" />

    <EditText
        android:id="@+id/nombre_aloj"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF "
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busqueda_label" />

    <Button
        android:id="@+id/busquedaFiltroBtn"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_fondo_color"
        android:onClick="BusquedaOnClick"
        android:text="@string/busqueda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/municipio_aloj" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_fondo_color"
        android:onClick="SalirBtn"
        android:text="@string/salir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busquedaFiltroBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>